Fixed the gap.

--- a/style.css
+++ b/style.css
@@ -50,17 +50,20 @@ header {
     text-decoration: none;
     display: inline-block;
     box-shadow: 0px 0px 10px black;
+    margin-bottom:3px;
 }
 
-#latest-img {
-    border-radius: 5px;
-}
+
 
 #contact a:hover {
     color:orange;
     text-decoration: none;
     display: inline-block;
     box-shadow: 0px 0px 0px black;
+}
+
+#latest-img {
+    border-radius: 5px;
 }
 
 #img-description {
